TAG: dlautils-5-2-1-4
DATE: 04/03/2015
STAFF: dbm
CHANGES:
1) DLAJobStreamFunctions.sh: Remove "pg" from "env | pg | sort"

TAG: dlautils-5-2-1-3
DATE: 03/11/2015
STAFF: dbm
CHANGES:
1) DLAJobStreamFunctions.sh: Remove \n from echo statements
2) JobStreamTemplate.sh: Remove \n from echo statements

TAG: dlautils-5-2-1-2
DATE: 02/24/2015
STAFF: dbm
CHANGES:
1) DLAJobStreamFunctions.sh: gzip the archive file after creating it

TAG: dlautils-5-2-1-1
DATE: 02/23/2015
STAFF: dbm
CHANGES:
1) DLAJobStreamFunctions.sh: use tar instead of jar for archiving for
                             solaris/linux compatability

TAG: dlautils-4-4-1-2
DATE: 04/11/2011
STAFF: sc
CHANGES: Added more commenting for the new -v option

TAG: dlautils-4-4-1-1
TAG: dlautils-4-4-4-1
DATE: 02/24/2011
STAFF: sc
CHANGES:
1) GBRecordSplitter.py - added -v option to consider the record complete when
   'variation' qualifier found.

TAG: dlautils-4-4-0-1
DATE: 10/13/2010
STAFF: dbm
CHANGES:
1) loadQueueReport.py: modified to make it stop printing duplicate
   "No Files Queued" messages when there are multiple file types per
   job stream.

TAG: dlautils-4-3-3-1
DATE: 03/11/2010
STAFF: dbm
CHANGES: merge tr10086 branch to trunk

TAG: dlautils-tr10086-1
DATE: 02/19/2010
STAFF: dbm
CHANGES:
1) DLAJobStreamFunctions.sh: Removed the RADAR DB Schema argument from the
   calls to startJobStream (preload) and stopJobStream (postload)

TAG: dlautils-tr10086-BP
DATE: 02/18/2010
STAFF: dbm
RELEASE: Development
CHANGES: Branch point tag for TR10086

TAG: dlautils-4-2-0-6
DATE: 07/17/2009
STAFF: sc
CHANGES: TR9718 - GBRecordSplitter updated to determine
  end of ORGANISM section using '.' since not all RefSeq
  records have the 'required' REFERENCE section.

TAG: dlautils-4-2-0-5
DATE: 04/23/2009
STAFF: sc
CHANGES: JobStreamTemplate.sh updated to use checkStatus

TAG: dlautils-4-2-0-4
TAG: dlautils-4-2-0-3
DATE: 03/17/2009
STAFF: sc
CHANGES:
1) DBCleanser - removed '-x'
2) JobStreamTemplate.sh - updated 